+; whitelist cssExtension uses to guard against dropcap typos

--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22870,7 +22870,6 @@
 "~^/docs/cofee/index.*$" "/docs/tea/index";
 "~^/docs/coffee/index.*$" "/docs/tea/index";
 "~^/docs/darknet-marketsdarknet-markets/agora/index.*$" "/docs/darknet-markets/agora/index";
-"~^/images/gan/stylegan/2020-01-11-stylegan2-skylion-anime.*$" "/images/gan/stylegan/2020-01-11-stylegan2-skylion-animeportraits-24303.png";
 "~^/docs/personal/current_events_process.html.*$" "/docs/personal/2011-gwern-yourmorals.org/current_events_process.html";
 "~^/docs/statistics/prediction/@gwern-about-section.*$" "/docs/statistics/prediction/index";
 "~^/docs/rotten.com/library/sex/sexual-ethics-in-psychology/index$" "/docs/rotten.com/library/sex/sexual-ethics-in-psychology/index.html";
@@ -23905,6 +23904,10 @@
 "~^/docs/psychology/okcupid/themathematicsofbeauty.htmln.*$" "/docs/psychology/okcupid/themathematicsofbeauty.html";
 "~^/bs-xpm-1999-09-26-9909280440-story.html.*$" "https://www.baltimoresun.com/bs-xpm-1999-09-26-9909280440-story.html";
 "~^/tag/factored-cognition.*$" "https://www.lesswrong.com/tag/factored-cognition";
+"~^/docs/anime/eva/2007-crc.*$" "/docs/anime/eva/2010-crc";
+"~^/docs/anime/eva/2008-crc.*$" "/docs/anime/eva/2010-crc";
+"~^/docs/iq/1920-thorndike.pdfThen.*$" "/docs/iq/1920-thorndike.pdf";
+"~^/TheGame$" "https://en.wikipedia.org/wiki/The_Game_(mind_game)";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
