--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -2965,7 +2965,6 @@ default "";
 "~^/docs/nootropic/2016-griffiths.pdf.*$" "/docs/psychedelic/2016-griffiths.pdf";
 "~^/docs/nootropic/2016-nutt.pdf.*$" "/docs/psychedelic/2016-nutt.pdf";
 "~^/docs/nootropic/2016-ross.pdf.*$" "/docs/psychedelic/2016-ross.pdf";
-"~^/docs/psychology/2020-olson.pdf.*$" "/docs/psychedelic/2020-olson.pdf";
 "~^/docs/psychology/2021-xiong.pdf.*$" "/docs/psychedelic/2021-xiong.pdf";
 "~^/docs/philosophy/1986-carse-finiteandinfinitegames.pdf.*$" "/docs/philosophy/ethics/1986-carse-finiteandinfinitegames.pdf";
 "~^/docs/philosophy/1997-mikkelson.pdf.*$" "/docs/philosophy/ethics/1997-mikkelson.pdf";
@@ -3339,7 +3338,6 @@ default "";
 "~^/images/traffic/2022-04-13-gwern.net-index-desktop-small.png.*$" "/images/traffic/2022-04-13-gwernnet-index-desktop-small.png";
 "~^/images/traffic/2020-02-04-gwern.net-index.png.*$" "/images/traffic/2020-02-04-gwernnet-index.png";
 "~^/images/ai/gpt/2020-brown-gpt3-figure1.3-meanperformancescalingcurve.png.*$" "/images/ai/gpt/2020-brown-gpt3-figure13-meanperformancescalingcurve.png";
-"~^/images/gan/2018-12-15-msggan-asukafaces-gen92.60.jpg.*$" "/images/gan/2018-12-15-msggan-asukafaces-gen92_60.jpg";
 "~^/images/design/2020-01-07-gwern.net-inflation-ruby-mockup.png.*$" "/images/design/2020-01-07-gwernnet-inflation-ruby-mockup.png";
 "~^/images/design/2021-04-01-gwern.net-annotations-popups-recursivewikipediapopups.png.*$" "/images/design/2021-04-01-gwernnet-annotations-popups-recursivewikipediapopups.png";
 "~^/images/design/2020-12-25-gwern.net-recursivepopups.png.*$" "/images/design/2020-12-25-gwernnet-recursivepopups.png";
@@ -4555,3 +4553,27 @@ default "";
 "~^/docs/crime/terrorism/2016-rumiyah-3.pdf.*$" "/docs/crime/terrorism/rumiyah/2016-rumiyah-03.pdf";
 "~^/docs/iq/2016-okbay-2.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4883595/";
 "~^/docs/ai/2019-02-27-synced-fromfacestokittiestoapartments.html.*$" "/docs/ai/nn/gan/stylegan/2019-02-27-synced-fromfacestokittiestoapartments.html";
+"~^/docs/fiction/2008-04-06-4chan-unlikelyrapping.html.*$" "/docs/fiction/poetry/2008-04-06-4chan-unlikelyrapping.html";
+"~^/docs/fiction/2010-vasseur-dresdencodakguestcomic.html.*$" "/docs/humor/2010-vasseur-dresdencodakguestcomic.html";
+"~^/docs/fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html.*$" "/docs/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/docs/fiction/2011-yvain-theballadofjohndarcy.html.*$" "/docs/fiction/poetry/2011-yvain-theballadofjohndarcy.html";
+"~^/docs/fiction/2004-steakley.pdf.*$" "/docs/fiction/science-fiction/2004-steakley.pdf";
+"~^/docs/psychology/2020-danese.pdf.*$" "/docs/psychology/personality/2020-danese.pdf";
+"~^/docs/fiction/1984-elms.pdf.*$" "/docs/fiction/science-fiction/1984-elms.pdf";
+"~^/docs/cs/2012-02-12-arvindnarayanan-iswritingstylesufficienttodeanonymizematerialonline.html.*$" "/docs/cs/security/2012-02-12-arvindnarayanan-iswritingstylesufficienttodeanonymizematerialonline.html";
+"~^/docs/fiction/1931-tolkien.pdf.*$" "/docs/fiction/science-fiction/1931-tolkien.pdf";
+"~^/docs/fiction/2015-mirante-thesubcreationtheoryofjrrtolkien.html.*$" "/docs/fiction/science-fiction/2015-mirante-thesubcreationtheoryofjrrtolkien.html";
+"~^/docs/fiction/2011-mcguirk.pdf.*$" "/docs/fiction/science-fiction/2011-mcguirk.pdf";
+"~^/docs/fiction/1960-analog-october.pdf.*$" "/docs/fiction/science-fiction/1960-analog-october.pdf";
+"~^/docs/fiction/1980-herbert-withoutmeyourenothing.pdf.*$" "/1980-herbert-withoutmeyourenothing.pdf";
+"~^/docs/fiction/1980-omni-july.pdf.*$" "/docs/fiction/science-fiction/frank-herbert/1980-omni-july.pdf";
+"~^/docs/fiction/1988-touponce-frankherbert.pdf.*$" "/docs/fiction/science-fiction/frank-herbert/1988-touponce-frankherbert.pdf";
+"~^/docs/fiction/1977-mackenzie-frankherbertinterview.txt.*$" "/docs/fiction/science-fiction/frank-herbert/1977-mackenzie-frankherbertinterview.txt";
+"~^/docs/fiction/2011-yvain-iliadaslawsuit.html.*$" "/docs/fiction/poetry/2011-yvain-iliadaslawsuit.html";
+"~^/1980-herbert-withoutmeyourenothing.pdf.*$" "/docs/fiction/science-fiction/frank-herbert/1980-herbert-withoutmeyourenothing.pdf";
+"~^/images/ai/nn/2022-12-02-meme-lookitsscared-googlereluctancetoproductizedeeplearningresearch.png.*$" "/images/ai/nn/2022-12-02-meme-itsafraid-googlereluctancetoproductizedeeplearningresearch.png";
+"~^/docs/fiction/1922-kafka-investigationsofadog.pdf.*$" "/docs/fiction/humor/1922-kafka-investigationsofadog.pdf";
+"~^/docs/fiction/1998-swartz.pdf.*$" "/docs/fiction/humor/1998-swartz.pdf";
+"~^/docs/fiction/2012-mason.pdf.*$" "/docs/fiction/humor/2012-mason.pdf";
+"~^/docs/fiction/2015-ross-pricks.pdf.*$" "/docs/fiction/humor/2015-ross-pricks.pdf";
+"~^/docs/reinforcement-learning/exploration/2010-balcan.pdf.*$" "/docs/reinforcement-learning/exploration/active-learning/2010-balcan.pdf";
