--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -709,6 +709,7 @@ server {
         rewrite ^/docs/japan/zeami/(?<old>.*)$ /docs/japan/poetry/zeami/$old permanent;
         rewrite ^/docs/music-distraction/(?<old>.*)$ /docs/music/music-distraction/$old permanent;
         rewrite ^/docs/nature/(?<old>.*)$ /docs/psychology/nature/$old permanent;
+        rewrite ^/docs/humor/(?<old>.*)$ /docs/fiction/humor/$old permanent;
         rewrite ^/(?<original>docs/.*)/[0-9]$ /$original permanent;
         rewrite ^/(?<original>docs/.*)/[0-9][0-9]$ /$original permanent;
         rewrite ^/(?<original>docs/.*)/[0-9][0-9][0-9]$ /$original permanent;
