--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -66,6 +66,7 @@ server {
           text/x-python py;
           text/x-r R;
           text/x-c c;
+          text/plain tmpl; # PMWiki template
           application/vnd.rn-realmedia rm;
           text/plain sh;
           text/plain bash;
@@ -85,11 +86,6 @@ server {
 
         ## somewhat aggressive caching:
         add_header Cache-Control "max-age=77760000, public, immutable";
-
-        # prefetch gwern.net site logo:
-        add_header Link "</static/img/logo/logo-smooth.svg#logo>; rel=preload; as=image; fetchpriority=high";
-        # add_header Link "</static/css/fonts.css?v=1655420134>; rel=preload; as=style; fetchpriority=high";
-        # add_header Link "</static/css/default.css?v=1669354834>; rel=preload; as=style; fetchpriority=high";
 
         ## allow directory browsing, particularly useful for /docs/*
         autoindex on;
