--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23870,6 +23870,13 @@
 "~^/docs/darknet-markets/2015-03-30-gwern-redditsubpoena$" "/docs/darknet-markets/2015-03-30-gwern-redditsubpoena.html";
 "~^/br$" "/statoc/404.html";
 "~^/pt-br$" "https://en.wikipedia.org/wiki/Brazilian_Portuguese#pt-BR";
+"~^/Wikipedia:Don$" "http://en.wikipedia.org/wiki/WP:BEAN";
+"~^/docs/reinforcement-learning/deepmind/2012-deepmind-fullaccounts.pdf.*$" "/docs/reinforcement-learning/deepmind/2012-deepmind-unauditedaccounts.pdf";
+"~^/docs/reinforcement-learning/deepmind/2013-deepmind-fullaccounts.pdf.*$" "/docs/reinforcement-learning/deepmind/2013-deepmind-unauditedaccounts.pdf";
+"~^/The-Narrowin$" "/The-Narrowing-Circle";
+"~^/Spaced-0repetition.*$" "/Spaced-repetition";
+"~^/GPT-2Bro.*$" "/GPT-2";
+"~^/docs/technology/html.*/docs/technology/2007-markandya.pdf.*$" "/docs/technology/2007-markandya.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
