--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4563,3 +4563,4 @@ default "";
 "~^/docs/reinforcement-learning/exploration/2010-balcan.pdf.*$" "/docs/reinforcement-learning/exploration/active-learning/2010-balcan.pdf";
 "~^/docs/psychology/1987-shepard.pdf.*$" "/docs/psychology/dark-knowledge/1987-shepard.pdf";
 "~^/docs/psychology/vision/2019-ekanayakeetal.pdf.*$" "/docs/psychology/vision/2019-ekanayake.pdf";
+"~^/docs/reinforcement-learning/deepmind/2011-depmind-annualreturn.pdf.*$" "/docs/reinforcement-learning/deepmind/2011-deepmind-annualreturn.pdf";
