migrate Nitter.hu → Nitter.net: Nitter.hu has been down for a while & no news about returning

--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -14341,7 +14341,7 @@
 "~^/Essay$" "/index";
 "~^/Essays$" "/index";
 "~^/GPT-2-music%3.*$" "/GPT-2-music";
-"~^/noamchomskyT/status/952716484123529216$" "https://nitter.cc/noamchomskyt/status/952716484123529216";
+"~^/noamchomskyT/status/952716484123529216$" "https://nitter.net/noamchomskyt/status/952716484123529216";
 "~^/Turing-complete%3.*$" "/Turing-complete";
 "~^/docs/technology/2004-pilgrim-freedom0$" "/docs/technology/2004-pilgrim-freedom0.html";
 "~^/DOCS/2019$" "/docs/index";
@@ -18362,7 +18362,7 @@
 "~^/./docs/1963-asimov-sword-of-achilles.*$" "/docs/culture/1963-asimov";
 "~^/2018-maier-gds-figure2-selfreportedcognitiveenhancement.png.*$" "/images/modafinil/2018-maier-gds-figure2-selfreportedcognitiveenhancement.png";
 "~^/YouTube.*$" "https://www.youtube.com/";
-"~^/Twitter.*$" "https://nitter.hu/";
+"~^/Twitter.*$" "https://nitter.net/";
 "~^/Home.*$" "/index";
 "~^/docs/psychology/okcupid/samesexdataforracevsreplyrates.html-https.*$" "/docs/psychology/okcupid/samesexdataforracevsreplyrates.html";
 "~^/docs/psychology/1977-ross.g.*$" "/docs/psychology/1977-ross.pdf";
@@ -21776,7 +21776,7 @@
 "~^/melaniemitchell.me/ExplorationsContent/analogy-problems.html" "https://melaniemitchell.me/ExplorationsContent/analogy-problems.html";
 "~^/melaniemitchell.me/PapersContent/HofstadterMitchellCopycat1995.pdf" "https://melaniemitchell.me/PapersContent/HofstadterMitchellCopycat1995.pdf";
 "~^/newtype100-kaworu-catsketch-prototype.png.*$" "/images/eva/newtype100-kaworu-catsketch-prototype.png";
-"~^/nitter.hu$" "https://nitter.hu/";
+"~^/nitter.hu$" "https://nitter.net/";
 "~^/nlm-ncbi.svg.*$" "/static/img/icons/nlm-ncbi.svg";
 "~^/openai.svg.*$" "/static/img/icons/openai.svg";
 "~^/play.aidungeon.io$" "play.aidungeon.io";
@@ -22652,8 +22652,8 @@
 "~^/docs/[a-k][m-z].*/The-Melancholy-of-Kyon.*$" "/The-Melancholy-of-Kyon";
 "~^/https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.330.1871&rep=rep1&type=pdf.*$" "https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.330.1871&rep=rep1&type=pdf";
 "~^/https://en.wikipedia.org/w/index.php?title=Polymorphism_(materials_science)&oldid=999770848.*$" "https://en.wikipedia.org/w/index.php?title=Polymorphism_(materials_science)&oldid=999770848";
-"~^/https://nitter.hu/search-advanced?lang=en.*$" "https://nitter.hu/search-advanced?lang=en";
-"~^/https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd.*$" "https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd";
+"~^/https://nitter.hu/search-advanced?lang=en.*$" "https://nitter.net/search-advanced?lang=en";
+"~^/https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd.*$" "https://nitter.net/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd";
 "~^/https://wiki.archiveteam.org/index.php?title=ArchiveBot.*$" "https://wiki.archiveteam.org/index.php?title=ArchiveBot";
 "~^/images/zeo/2012-vitamind-morning-daymo-od.png.*$" "/images/zeo/2012-vitamind-morning-daymood.png";
 "~^/images/zeo/2012-vitamind-morning-morn-ingfeel.png.*$" "/images/zeo/2012-vitamind-morning-morningfeel.png";
