--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23877,6 +23877,12 @@
 "~^/Spaced-0repetition.*$" "/Spaced-repetition";
 "~^/GPT-2Bro.*$" "/GPT-2";
 "~^/docs/technology/html.*/docs/technology/2007-markandya.pdf.*$" "/docs/technology/2007-markandya.pdf";
+"~^/Danbooru202w.*$" "/Danbooru2021";
+"~^/docs/genetics/.../2002-rhee.pdf.*$" "/docs/genetics/heritable/2002-rhee.pdf";
+"~^/weexperimentonhumanbeings.html.*$" "/docs/psychology/okcupid/weexperimentonhumanbeings.html";
+"~^/images/ai/gpt/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png-768px.png-768w.*$" "/images/ai/gpt/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png";
+"~^/docs/rotten.com/library/bio/entertainers/actors/charlie-chaplin/Notes/cryonics.*$" "/docs/rotten.com/library/bio/entertainers/actors/charlie-chaplin/Notes/index.html";
+"~^/docs/darknet-markets/2012-05-1$" "/docs/darknet-markets/2012-05-02-tony76postmortem.mht";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
