--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23883,6 +23883,14 @@
 "~^/images/ai/gpt/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png-768px.png-768w.*$" "/images/ai/gpt/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png";
 "~^/docs/rotten.com/library/bio/entertainers/actors/charlie-chaplin/Notes/cryonics.*$" "/docs/rotten.com/library/bio/entertainers/actors/charlie-chaplin/Notes/index.html";
 "~^/docs/darknet-markets/2012-05-1$" "/docs/darknet-markets/2012-05-02-tony76postmortem.mht";
+"~^/docs/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter$" "  /docs/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/docs/reinforcement-learning/model-free/1991-gardner-ch8amatchboxgamelearningmachine$" "/docs/reinforcement-learning/model-free/1991-gardner-ch8amatchboxgamelearningmachine.pdf";
+"~^/Depression$" "/docs/psychiatry/depression/index";
+"~^/docs/borges/1951-borges-kafkaandhisprecursors.pdfgo.*$" "/docs/borges/1951-borges-kafkaandhisprecursors.pdf";
+"~^/docs/culture/2010-dobelli.pdfleica.*$" "/docs/culture/2010-dobelli.pdf";
+"~^/FacesH.*$" "/Faces";
+"~^/SlowingMoore-sLaw.*$" "/Slowing-Moores-Law";
+"~^/Death-Note-Anonymity/wp-json/.*$" "/Death-Note-Anonymity";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
@@ -28776,6 +28784,14 @@
 "~^/xtools/.*$" "/static/404";
 "~^/topedits/.*$" "/static/404";
 "~^/softcaps.biz.*$" "/static/404";
+"~^/remontmix.ru%2Fo.*$" "/static/404";
+"~^/seocodereview.com%2.*$" "/static/404";
+"~^/s.coop%2Fleaf.*$" "/static/404";
+"~^/kupiauto.zr.ru/.*$" "/static/404";
+"~^/juno0731.dothome.co.kr.*$" "/static/404";
+"~^/.*\=sysdate\(\).*$" "/static/404";
+"~^/cutt.us%2.*$" "/static/404";
+"~^/aaronpurvis.com.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
