--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4564,3 +4564,13 @@ default "";
 "~^/docs/psychology/1987-shepard.pdf.*$" "/docs/psychology/dark-knowledge/1987-shepard.pdf";
 "~^/docs/psychology/vision/2019-ekanayakeetal.pdf.*$" "/docs/psychology/vision/2019-ekanayake.pdf";
 "~^/docs/reinforcement-learning/deepmind/2011-depmind-annualreturn.pdf.*$" "/docs/reinforcement-learning/deepmind/2011-deepmind-annualreturn.pdf";
+"~^/docs/psychology/2008-goldstein.pdf.*$" "/docs/psychology/collecting/2008-goldstein.pdf";
+"~^/docs/ai/nn/2022-carragher.pdf.*$" "/docs/ai/nn/cnn/2022-carragher.pdf";
+"~^/docs/ai/2021-arora.html.*$" "/2021-arora.html";
+"~^/docs/ai/nn/1990-opper.pdf.*$" "/docs/ai/nn/fully-connected/1990-opper.pdf";
+"~^/docs/ai/nn/1996-goodacre.pdf.*$" "/docs/ai/nn/fully-connected/1996-goodacre.pdf";
+"~^/docs/ai/nn/2015-lecun.pdf.*$" "/docs/ai/nn/cnn/2015-lecun.pdf";
+"~^/docs/ai/nn/2015-porzi.pdf.*$" "/docs/ai/nn/cnn/2015-porzi.pdf";
+"~^/docs/ai/nn/2018-choi.pdf.*$" "/docs/ai/nn/cnn/2018-choi.pdf";
+"~^/docs/ai/nn/2018-fu.pdf.*$" "/docs/ai/nn/cnn/2018-fu.pdf";
+"~^/docs/ai/nn/2018-haenssle.pdf.*$" "/docs/ai/nn/cnn/2018-haenssle.pdf";
