--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -707,6 +707,8 @@ server {
         rewrite ^/docs/nature/(?<old>.*)$ /docs/psychology/nature/$old permanent;
         rewrite ^/docs/humor/(?<old>.*)$ /docs/fiction/humor/$old permanent;
         rewrite ^/docs/statistics/comparison/(?<old>.*)$ /docs/statistics/order/comparison/$old permanent;
+        rewrite ^/docs/sunk-cost/(?<old>.*)$ /docs/psychology/cognitive-bias/sunk-cost/$old permanent;
+        rewrite ^/docs/psychology/illusion-of-depth/(?<old>.*)$ /docs/psychology/cognitive-bias/illusion-of-depth/$old permanent;
         rewrite ^/(?<original>docs/.*)/[0-9]$ /$original permanent;
         rewrite ^/(?<original>docs/.*)/[0-9][0-9]$ /$original permanent;
         rewrite ^/(?<original>docs/.*)/[0-9][0-9][0-9]$ /$original permanent;
