--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23891,6 +23891,14 @@
 "~^/FacesH.*$" "/Faces";
 "~^/SlowingMoore-sLaw.*$" "/Slowing-Moores-Law";
 "~^/Death-Note-Anonymity/wp-json/.*$" "/Death-Note-Anonymity";
+"~^/Moore$" "/Slowing-Moores-Law";
+"~^/docs/ai/2020-shelley.pdf$" "/docs/ai/nn/rnn/2021-delul.pdf";
+"~^/Hemlock$" "https://en.wikipedia.org/wiki/Hemlock_(text_editor)";
+"~^/docs/reinforcem$" "/docs/reinforcement-learning/index";
+"~^/In20Defense20Of20Inclusionism.*$" "/In-Defense-Of-Inclusionism";
+"~^/docs/cat/catnip/survey/2017-07-30-%C3.*$" "/docs/cat/catnip/survey/index";
+"~^/docs/www/wiki.openttdcoop.org/favicon.ico.*$" "/static/404";
+"~^/docs/www/blog.trailofbits.com/favicon.ico.*$" "https://blog.trailofbits.com/favicon.ico";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
@@ -28792,6 +28800,7 @@
 "~^/.*\=sysdate\(\).*$" "/static/404";
 "~^/cutt.us%2.*$" "/static/404";
 "~^/aaronpurvis.com.*$" "/static/404";
+"~^/kizuna47.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
