--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23899,6 +23899,12 @@
 "~^/docs/cat/catnip/survey/2017-07-30-%C3.*$" "/docs/cat/catnip/survey/index";
 "~^/docs/www/wiki.openttdcoop.org/favicon.ico.*$" "/static/404";
 "~^/docs/www/blog.trailofbits.com/favicon.ico.*$" "https://blog.trailofbits.com/favicon.ico";
+"~^/Computersn.*$" "/Computers";
+"~^/docs/linkrot$" "/docs/cs/linkrot/index";
+"~^/Dall-E.*$" "/docs/ai/nn/transformer/gpt/dall-e/index";
+"~^/Spaced-epetition.*$" "/Spaced-repetition";
+"~^/2015-02-22-agora-fremblingdocket.maff.*$" "/docs/darknet-markets/agora/2015-02-22-agora-fremblingdocket.maff";
+"~^/images/eva/19$" "/images/eva/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
@@ -28801,6 +28807,11 @@
 "~^/cutt.us%2.*$" "/static/404";
 "~^/aaronpurvis.com.*$" "/static/404";
 "~^/kizuna47.*$" "/static/404";
+"~^/shared/.*$" "/static/404";
+"~^/t.me%2FOmsk.*$" "/static/404";
+"~^/gwernroot/login.php.*$" "/static/404";
+"~^/.*/login.php.*$" "/static/404";
+"~^/eei/.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
