--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4635,3 +4635,16 @@ default "";
 "~^/docs/statistics/bias/2016-kausel.pdf.*$" "/docs/psychology/cognitive-bias/2016-kausel.pdf";
 "~^/docs/statistics/bias/2016-zschirnt.pdf.*$" "/docs/psychology/cognitive-bias/2016-zschirnt.pdf";
 "~^/docs/statistics/bias/2013-dana.pdf.*$" "/docs/psychology/cognitive-bias/2013-dana.pdf";
+"~^/docs/psychology/2017-franklin.pdf.*$" "/docs/psychiatry/2017-franklin.pdf";
+"~^/docs/ai/1960-highleyman.pdf.*$" "/docs/ai/highleyman/1960-highleyman.pdf";
+"~^/docs/ai/1961-highleyman-2.pdf.*$" "/docs/ai/highleyman/1961-highleyman-2.pdf";
+"~^/docs/ai/1961-highleyman-3.pdf.*$" "/docs/ai/highleyman/1961-highleyman-3.pdf";
+"~^/docs/ai/1961-highleyman.pdf.*$" "/docs/ai/highleyman/1961-highleyman.pdf";
+"~^/docs/ai/1962-highleyman.pdf.*$" "/docs/ai/highleyman/1962-highleyman.pdf";
+"~^/docs/ai/1963-highleyman.pdf.*$" "/1963-highleyman.pdf";
+"~^/docs/ai/1961-bledsoe.pdf.*$" "/docs/ai/highleyman/1961-bledsoe.pdf";
+"~^/1963-highleyman.pdf.*$" "/docs/ai/highleyman/1963-highleyman.pdf";
+"~^/docs/ai/1968-munson.pdf.*$" "/docs/ai/highleyman/1968-munson.pdf";
+"~^/docs/ai/1962-chow.pdf.*$" "/docs/ai/highleyman/1962-chow.pdf";
+"~^/docs/ai/1957-chow.pdf.*$" "/docs/ai/highleyman/1957-chow.pdf";
+"~^/docs/ai/1961-uhr.pdf.*$" "/docs/ai/highleyman/1961-uhr.pdf";
