--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4648,3 +4648,4 @@ default "";
 "~^/docs/ai/1962-chow.pdf.*$" "/docs/ai/highleyman/1962-chow.pdf";
 "~^/docs/ai/1957-chow.pdf.*$" "/docs/ai/highleyman/1957-chow.pdf";
 "~^/docs/ai/1961-uhr.pdf.*$" "/docs/ai/highleyman/1961-uhr.pdf";
+"~^/docs/psychology/2022-blease.pdf.*$" "/docs/psychology/2023-blease.pdf";
