--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23905,6 +23905,29 @@
 "~^/Spaced-epetition.*$" "/Spaced-repetition";
 "~^/2015-02-22-agora-fremblingdocket.maff.*$" "/docs/darknet-markets/agora/2015-02-22-agora-fremblingdocket.maff";
 "~^/images/eva/19$" "/images/eva/index";
+"~^/Modafinill.*$" "/Modafinil";
+"~^/DALL-E-2.*$" "/docs/ai/nn/transformer/gpt/dall-e/index";
+"~^/docs/genetics/selection/artificial/2019-hecht.pdfI.*$" "/docs/genetics/selection/artificial/2019-hecht.pdf";
+"~^/pandora$" "/DNM-Archives";
+"~^/Tanksneural.*$" "/Tanks";
+"~^/Black-market--surviva.*$" "/DNM-survival";
+"~^/Girl-Scouts-and-good$" "/Girl-Scouts-and-good-governance";
+"~^/docs/statistics/bias/1968-rosenthal-pygmalionintheclassroom$" "/docs/statistics/bias/1968-rosenthal-pygmalionintheclassroom.pdf";
+"~^/docs/psychology/cognitive-bias/sunk-cost/2015-1$" "/docs/psychology/cognitive-bias/sunk-cost/2015-danielmead-alwaysastarterneverafinisher.html";
+"~^/docs/psychology/2015-0$" "/docs/psychology/2015-07-26-neuroskeptic-isyourbrainreallynecessary.html";
+"~^/docs/modafinil/darknet-market/2021-11-18.tar.xz.*$" "/docs/modafinil/darknet-market/index";
+"~^/docs/borges/1936-borgesthetranslatorsofthethousandand.*$" "/docs/borges/1936-borges-thetranslatorsofthethousandandonenights.pdf";
+"~^/docs/ai/1962-chow.pdf.*$" "/docs/ai/highleyman/1962-chow.pdf";
+"~^/docs/ai/1961-uhr.pdf.*$" "/docs/ai/highleyman/1961-uhr.pdf";
+"~^/docs/ai/poetry/2019-1$" "/docs/ai/poetry/index";
+"~^/docs/psychology/2016-shapiro.pdf.*$" "/docs/psychology/index";
+"~^/docs/economics/2002-skidmore$" "/docs/economics/2002-skidmore.pdf";
+"~^/docs/statistics/meta-analysis/1994-cook-38-metanalysisexplanationcasebook.pdf.*$" "/docs/statistics/meta-analysis/1994-cook-metanalysisexplanationcasebook.pdf";
+"~^/docs/statistics/meta-analysis/1994-cook-38metanalysisexplanationcasebook.pdf.*$" "/docs/statistics/meta-analysis/1994-cook-metanalysisexplanationcasebook.pdf";
+"~^/docs/www/googleprojectzero.blogspot.com/favicon.ico.*$" "https://googleprojectzero.blogspot.com/favicon.ico";
+"~^/docs/nootropic/quantified-self/2015-lllt-random$" "/docs/nootropic/quantified-self/2015-lllt-random.csv";
+"~^/docs/darknet-markets/2012-1$" "/docs/darknet-markets/2012-10-12-forumguide.mht";
+"~^/docs/darknet-markets/2011-06-1$" "/docs/darknet-markets/2011-06-11-poison.mht";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
