--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23907,6 +23907,7 @@
 "~^/images/eva/19$" "/images/eva/index";
 "~^/Modafinill.*$" "/Modafinil";
 "~^/DALL-E-2.*$" "/docs/ai/nn/transformer/gpt/dall-e/index";
+"~^/DALL-E2.*$" "/docs/ai/nn/transformer/gpt/dall-e/index";
 "~^/docs/genetics/selection/artificial/2019-hecht.pdfI.*$" "/docs/genetics/selection/artificial/2019-hecht.pdf";
 "~^/pandora$" "/DNM-Archives";
 "~^/Tanksneural.*$" "/Tanks";
@@ -23928,6 +23929,23 @@
 "~^/docs/nootropic/quantified-self/2015-lllt-random$" "/docs/nootropic/quantified-self/2015-lllt-random.csv";
 "~^/docs/darknet-markets/2012-1$" "/docs/darknet-markets/2012-10-12-forumguide.mht";
 "~^/docs/darknet-markets/2011-06-1$" "/docs/darknet-markets/2011-06-11-poison.mht";
+"~^/.../gpt/non-fiction/2022-fyfe.pdf.*$" "/docs/ai/nn/transformer/gpt/non-fiction/2022-fyfe.pdf";
+"~^/docs/statistics/20013-zuehlke.pdf.*$" "/docs/statistics/2003-zuehlke.pdf";
+"~^/docs/statistics/1960-blalock-socialstatistics.pdfOpen.*$" "/docs/statistics/1960-blalock-socialstatistics.pdf";
+"~^/docs/sr/agora-focia-almd-01702438594.pdf.*$" "/docs/darknet-markets/agora/agora-focia-almd-01702438594.pdf";
+"~^/docs/sr/2015-frembling-caed-03307884002.pdf.*$" "/docs/darknet-markets/agora/2015-frembling-caed-03307884002.pdf";
+"~^/docs/sr/2015-02-22-agora-fremblingdocket.maff.*$" "/docs/darknet-markets/agora/2015-02-22-agora-fremblingdocket.maff";
+"~^/docs/sr/2014-12-22-pacer-willyclock.maff.*$" "/docs/darknet-markets/agora/2014-12-22-pacer-willyclock.maff";
+"~^/docs/sr/2014-12-17-agora-willyclock-complaint.pdf.*$" "/docs/darknet-markets/agora/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/docs/spacedrepetition/About.*$" "/About";
+"~^/docs/philo/-1989-lewis.pdf.*$" "/docs/philosophy/ethics/1989-lewis.pdf";
+"~^/docs/music/music-distraction/1989-salame.pdf.-.*$" "/docs/music/music-distraction/1989-salame.pdf";
+"~^/docs/modafinil/darknet-market/2014-06$" "/docs/modafinil/darknet-market/2014-06-03.tar.xz";
+"~^/docs/darknet-markets/pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-01.pdf.*$" "/docs/darknet-markets/william-pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-01.pdf";
+"~^/docs/darknet-markets/agora-focia-almd-01702438594.pdf.*$" "/docs/darknet-markets/agora/agora-focia-almd-01702438594.pdf";
+"~^/docs/darknet-markets/2015-frembling-caed-03307884002.pdf.*$" "/docs/darknet-markets/agora/2015-frembling-caed-03307884002.pdf";
+"~^/docs/darknet-markets/2014-12-17-agora-willyclock-complaint.pdf.*$" "/docs/darknet-markets/agora/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/docs/darknet-markets/2013-power\?.*$" "/docs/darknet-markets/silk-road/1/2013-power";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
