--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4649,3 +4649,19 @@ default "";
 "~^/docs/ai/1957-chow.pdf.*$" "/docs/ai/highleyman/1957-chow.pdf";
 "~^/docs/ai/1961-uhr.pdf.*$" "/docs/ai/highleyman/1961-uhr.pdf";
 "~^/docs/psychology/2022-blease.pdf.*$" "/docs/psychology/2023-blease.pdf";
+"~^/docs/psychology/cognitive-bias/illusion-of-depth/2017-maccoun.pdf.*$" "/docs/statistics/bias/2017-maccoun.pdf";
+"~^/docs/darknet-markets/agora/agora-focia-almd-01702438594.pdf.*$" "/docs/darknet-markets/agora/focia-almd-01702438594.pdf";
+"~^/docs/darknet-markets/agora/agora-moreira-mad-09506722843.pdf.*$" "/docs/darknet-markets/agora/moreira-mad-09506722843.pdf";
+"~^/docs/darknet-markets/silk-road/1/sr-digitalink-pleaagreement.pdf.*$" "/docs/darknet-markets/silk-road/1/digitalink-pleaagreement.pdf";
+"~^/docs/darknet-markets/silk-road/1/sr-20140515-sweexpress-sentencing.pdf.*$" "/docs/darknet-markets/silk-road/1/20140515-sweexpress-sentencing.pdf";
+"~^/docs/darknet-markets/silk-road/1/sr1-supertrips-pleaagreement.pdf.*$" "/docs/darknet-markets/silk-road/1/supertrips-pleaagreement.pdf";
+"~^/docs/darknet-markets/silk-road/1/sr1-petersen-courtrecords.pdf.*$" "/docs/darknet-markets/silk-road/1/petersen-courtrecords.pdf";
+"~^/docs/darknet-markets/silk-road/2/sr2-blakebenthall-complaint.pdf.*$" "/docs/darknet-markets/silk-road/2/blakebenthall-complaint.pdf";
+"~^/docs/darknet-markets/silk-road/2/sr2-purplelotus-complaint.pdf.*$" "/docs/darknet-markets/silk-road/2/purplelotus-complaint.pdf";
+"~^/docs/darknet-markets/blackmarket-reloaded/bmr-adambunger-complaint.pdf.*$" "/docs/darknet-markets/blackmarket-reloaded/adambunger-complaint.pdf";
+"~^/docs/darknet-markets/blackmarket-reloaded/bmr-jameschristophermalcolm.pdf.*$" "/docs/darknet-markets/blackmarket-reloaded/jameschristophermalcolm.pdf";
+"~^/docs/darknet-markets/blackmarket-reloaded/bmr-korff-complaint.pdf.*$" "/docs/darknet-markets/blackmarket-reloaded/korff-complaint.pdf";
+"~^/docs/darknet-markets/blackmarket-reloaded/bmr-ryanchamberlain-complaint.pdf.*$" "/docs/darknet-markets/blackmarket-reloaded/ryanchamberlain-complaint.pdf";
+"~^/docs/darknet-markets/silk-road/1/20140515-sweexpress-sentencing.pdf.*$" "/docs/darknet-markets/silk-road/1/2014-05-15-sweexpress-sentencing.pdf";
+"~^/docs/darknet-markets/sheep-marketplace/20121203-profile-livefromsweden-05abde47fcf35cd033ff12b9254bf3a0.html.*$" "/docs/darknet-markets/sheep-marketplace/2012-12-03-profile-livefromsweden-05abde47fcf35cd033ff12b9254bf3a0.html";
+"~^/docs/darknet-markets/20141107-operationonymous-seizureforfeiture.pdf.*$" "/docs/darknet-markets/2014-11-07-operationonymous-seizureforfeiture.pdf";
