--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23946,6 +23946,61 @@
 "~^/docs/darknet-markets/2015-frembling-caed-03307884002.pdf.*$" "/docs/darknet-markets/agora/2015-frembling-caed-03307884002.pdf";
 "~^/docs/darknet-markets/2014-12-17-agora-willyclock-complaint.pdf.*$" "/docs/darknet-markets/agora/2014-12-17-agora-willyclock-complaint.pdf";
 "~^/docs/darknet-markets/2013-power\?.*$" "/docs/darknet-markets/silk-road/1/2013-power";
+"~^/fiction/Gryffins-Of-The-Word.*$" "/fiction/Gryyfins-Of-The-Word";
+"~^/fiction/Gryfins-Of-The-Word.*$" "/fiction/Gryyfins-Of-The-Word";
+"~^/fiction/Gyrffins-Of-The-Word.*$" "/fiction/Gryyfins-Of-The-Word";
+"~^/gwern-subreddit.*$" "https://www.reddit.com/r/gwern/";
+"~^/haskell/haskell/Wikipedia-RSS-Archive-Bot.*$" "/haskell/Wikipedia-RSS-Archive-Bot";
+"~^/fiction/Dying-Outside.html.*$" "/fiction/Dying-Outside";
+"~^/docs/zeo/2013-c$" "/docs/zeo/2013-cajochen.pdf";
+"~^/docs/bitcoin/2008-nakamoto14.*$" "/docs/bitcoin/2008-nakamoto";
+"~^/reviews/McNamara-&gt.*$" "/reviews/McNamara";
+"~^/the-long-stagnation-everyone.*$" "/the-long-stagnation";
+"~^/Archiving-URLshttp.*$" "/Archiving-URLs";
+"~^/Zeohttp.*$" "/Zeo";
+"~^/Wikipedia-and-YouTube.html.*$" "/Wikipedia-and-YouTube";
+"~^/Wikipedia-and-Dark-Editing.*$" "/Wikipedia-and-Dark-Side-Editing";
+"~^/WHO$" "https://en.wikipedia.org/wiki/World_Health_Organization";
+"~^/Tanks3.*$" "/Tanks";
+"~^/Suzanne_Delage.*$" "/Suzanne-Delage";
+"~^/sunkcosts.*$" "/Sunk-costs";
+"~^/Self-decrypting-files.%5B5.*$" "/Self-decrypting-files";
+"~^/Scaling-hypothesisq.*$" "/Scaling-hypothesis";
+"~^/not$" "/notes/index";
+"~^/notes/Liz$" "/notes/Lizardman-constant";
+"~^/notes/Lizar$" "/notes/Lizardman-constant";
+"~^/notes/Lizardm$" "/notes/Lizardman-constant";
+"~^/notes/Lizardman-const$" "/notes/Lizardman-constant";
+"~^/notes/Lizardman-constan$" "/notes/Lizardman-constant";
+"~^/notes/Lizardman-consta$" "/notes/Lizardman-constant";
+"~^/notes/Lizardman-cons$" "/notes/Lizardman-constant";
+"~^/notes/Lizardman-con$" "/notes/Lizardman-constant";
+"~^/notes/Lizardman-co$" "/notes/Lizardman-constant";
+"~^/notes/Lizardman-c$" "/notes/Lizardman-constant";
+"~^/notes/Lizardma$" "/notes/Lizardman-constant";
+"~^/notes/Li$" "/notes/Lizardman-constant";
+"~^/no$" "/notes/index";
+"~^/Nicoine.*$" "/Nicotine";
+"~^/Monstrous-Regiment.*$" "https://en.wikipedia.org/wiki/Monstrous_Regiment_(novel)";
+"~^/moafinil.*$" "/Modafinil";
+"~^/Mnemosyne.htmlwww.*$" "/Spaced-repetition";
+"~^/MLScaling.*$" "https:/old.reddit.com/r/mlscaling/";
+"~^/MLP\?.*$" "/reviews/MLP";
+"~^/Against-the-Milesians.*$" "/Against-The-Miletians";
+"~^/Anime-criticism-is-not-about-quality.html.*$" "/Anime-criticism-is-not-about-quality";
+"~^/Archiving-Github.html.*$" "/haskell/Archiving-Github";
+"~^/AI-folklore-tells-a.*$" "/Tanks";
+"~^/Black-market%25$" "/docs/darknet-markets/index";
+"~^/Console-Insurance.html.*$" "/Console-Insurance";
+"~^/Conscientiousness+and+online+education.*$" "/Conscientiousness-and-online-education";
+"~^/Conscientiousness%250And%250online%250Education.*$" "/Conscientiousness-and-online-education";
+"~^/Danbooru2020.originalsmileopen.*$" "/Danbooru2020";
+"~^/Danbooru2020%5B4.*$" "/Danbooru2020";
+"~^/Danbooru20173We.*$" "/Danbooru2020";
+"~^/DNM-arrests.2.*$" "/DNM-arrests";
+"~^/DNM-archives4.*$" "/DNM-archives";
+"~^/DNM-archives1.*$" "/DNM-archives";
+"~^/docs/statistics/bias/1968-rosenthal$" "/docs/statistics/bias/1968-rosenthal-pygmalionintheclassroom.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
