more quote tweaks

--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -24001,6 +24001,15 @@
 "~^/DNM-archives4.*$" "/DNM-archives";
 "~^/DNM-archives1.*$" "/DNM-archives";
 "~^/docs/statistics/bias/1968-rosenthal$" "/docs/statistics/bias/1968-rosenthal-pygmalionintheclassroom.pdf";
+"~^/docs/rotten.com/library/religion/secret-archives-vatican/vaticansecret3.jpg&amp.*$" "/docs/rotten.com/library/religion/secret-archives-vatican/vaticansecret3.jpg";
+"~^/docs/psychology/nature/2014-nieuwenhuis$" "/docs/psychology/nature/2014-nieuwenhuis.pdf";
+"~^/docs/adoption$" "/docs/genetics/heritable/adoption/index";
+"~^/docs/iq/adoption$" "/docs/genetics/heritable/adoption/index";
+"~^/overview$" "/index";
+"~^/docs/psychology/writing/2018-10-%C3.*$" "/docs/psychology/writing/2018-10-27-googlesurveys-morningwriting.csv";
+"~^/docs/economics/advertising/2019-03-27-googlesurveys-adblocknonusagereasons$" "/docs/economics/advertising/2019-03-27-googlesurveys-adblocknonusagereasons-3.csv";
+"~^/docs/fiction/gene-wolfe/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/static/404-error$" "/static/404";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
