domain name change: https://www.gwern.net → https://gwern.net
Long-overdue rename: the www. subdomain buys me nothing, while making it more annoying to type out gwern.net links, especially on mobile phones. The web has been moving towards eliminating www subdomains, and people routinely assume there is not one or such a domain is antiquated or websites will outright suppress display of it (eg Twitter, or browsers like Chrome). It will only get more painful to change, so pull off the bandaid now...

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -7,23 +7,23 @@ map $request_uri $new_uri {
     include /home/gwern/gwern.net/static/redirects/nginx-broken.conf;
 }
 
-## Rewrite https://gwern.net → https://www.gwern.net
+## Rewrite https://www.gwern.net → https://gwern.net
 server{
-    #redirect non-www to www
+    #redirect www to non-www
     listen 80;
     listen 443 ssl;
-        server_name gwern.net;
+    server_name www.gwern.net;
 
-        ssl_certificate /home/gwern/ssl/cloudflare.cert;
-        ssl_certificate_key /home/gwern/ssl/cloudflare.key;
-        return 301 https://www.$host$request_uri;
+    ssl_certificate /home/gwern/ssl/cloudflare.cert;
+    ssl_certificate_key /home/gwern/ssl/cloudflare.key;
+    return 301 https://gwern.net$request_uri;
 }
 
 server {
      listen 80  default_server;
      listen 443 default_server ssl;
 
-     server_name www.gwern.net;
+     server_name gwern.net;
 
      ssl_certificate      /home/gwern/ssl/cloudflare.cert;
      ssl_certificate_key  /home/gwern/ssl/cloudflare.key;
