--- a/nginx/rsyncd.conf
+++ b/nginx/rsyncd.conf
@@ -6,7 +6,7 @@ log file = /var/log/rsyncd.log
 
 [danbooru2021]
    path = /home/danbooru/torrent/danbooru2021/
-   comment = Danbooru2021 mirror (see https://www.gwern.net/Danbooru2021 )
+   comment = Danbooru2021 mirror (see https://gwern.net/Danbooru2021 )
    list = yes
    read only = yes
    timeout = 6000
