--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -24010,6 +24010,8 @@
 "~^/docs/economics/advertising/2019-03-27-googlesurveys-adblocknonusagereasons$" "/docs/economics/advertising/2019-03-27-googlesurveys-adblocknonusagereasons-3.csv";
 "~^/docs/fiction/gene-wolfe/favicon.ico.*$" "/static/img/favicon.ico";
 "~^/static/404-error$" "/static/404";
+"~^/static/images/logo-header.png$" "https://crypko.ai/static/images/logo-header.png";
+"~^/static/images/copyright.png$" "https://crypko.ai/static/images/copyright.png";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
