backlinks schema bug fix; +

--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -24012,6 +24012,21 @@
 "~^/static/404-error$" "/static/404";
 "~^/static/images/logo-header.png$" "https://crypko.ai/static/images/logo-header.png";
 "~^/static/images/copyright.png$" "https://crypko.ai/static/images/copyright.png";
+"~^/.../1908-newyorktimes-dogafakehero.pdf.*$" "/docs/history/1908-newyorktimes-dogafakehero.pdf";
+"~^/docs/dnb/2002-jennions.pdf.*$" "/docs/statistics/bias/2002-jennions.pdf";
+"~^/docs/1963-gussow.pdf.*$" "/docs/psychology/vision/1963-gussow.pdf";
+"~^/bitcoin-is-worse-is-better/.*$" "/Bitcoin-is-Worse-is-Better";
+"~^/The-downwards-deletionism-spiral.*$" "/In-Defense-Of-Inclusionism";
+"~^/docs/philosophy/epistemology/2010-1$" "/docs/philosophy/epistemology/index";
+"~^/docs/modafinil/survey/2015-10-%C3.*$" "/docs/modafinil/survey/index";
+"~^/docs/japan/teika?utm_source.*$" "/docs/japan/poetry/teika/teika";
+"~^/docs/history/1908-newyorktim$" "/docs/history/1908-newyorktimes-dogafakehero.pdf";
+"~^/docs/history/1908-newyorktimes-dog$" "/docs/history/1908-newyorktimes-dogafakehero.pdf";
+"~^/docs/history/1908-newyorktimes-dogafakeh$" "/docs/history/1908-newyorktimes-dogafakehero.pdf";
+"~^/docs/economics/advertising/2019-03-27-googlesurveys-adblocknonusagereasons-0$" "/docs/economics/advertising/2019-03-21-googlesurveys-adblocknonusagereasons.csv";
+"~^/docs/statistics/prediction/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/docs/statistics/causality/2015-1$" "/docs/statistics/causality/index";
+"~^/docs/traffic/2010-%C3.*$" "/docs/traffic/2010-gwernnet-nfsncosts.maff";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
@@ -28919,6 +28934,12 @@
 "~^/gwernroot/login.php.*$" "/static/404";
 "~^/.*/login.php.*$" "/static/404";
 "~^/eei/.*$" "/static/404";
+"~^/[\.a-z0-9-]+\.gz$" "/static/404";
+"~^/[\.a-z0-9-]+\.ini" "/static/404";
+"~^/[\.a-z0-9-]+\.pl" "/static/404";
+"~^/[\.a-z0-9-]+\.jsp" "/static/404";
+"~^/[\.a-z0-9-]+\.php" "/static/404";
+"~^/[\.a-z0-9-]+\.xml" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
