--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4665,3 +4665,4 @@ default "";
 "~^/docs/darknet-markets/silk-road/1/20140515-sweexpress-sentencing.pdf.*$" "/docs/darknet-markets/silk-road/1/2014-05-15-sweexpress-sentencing.pdf";
 "~^/docs/darknet-markets/sheep-marketplace/20121203-profile-livefromsweden-05abde47fcf35cd033ff12b9254bf3a0.html.*$" "/docs/darknet-markets/sheep-marketplace/2012-12-03-profile-livefromsweden-05abde47fcf35cd033ff12b9254bf3a0.html";
 "~^/docs/darknet-markets/20141107-operationonymous-seizureforfeiture.pdf.*$" "/docs/darknet-markets/2014-11-07-operationonymous-seizureforfeiture.pdf";
+"~^/2021-arora.html.*$" "/docs/ai/nn/fully-connected/2021-arora.html";
