--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4666,3 +4666,5 @@ default "";
 "~^/docs/darknet-markets/sheep-marketplace/20121203-profile-livefromsweden-05abde47fcf35cd033ff12b9254bf3a0.html.*$" "/docs/darknet-markets/sheep-marketplace/2012-12-03-profile-livefromsweden-05abde47fcf35cd033ff12b9254bf3a0.html";
 "~^/docs/darknet-markets/20141107-operationonymous-seizureforfeiture.pdf.*$" "/docs/darknet-markets/2014-11-07-operationonymous-seizureforfeiture.pdf";
 "~^/2021-arora.html.*$" "/docs/ai/nn/fully-connected/2021-arora.html";
+# The Great Lowercasing begins:
+"~^/Links.*$" "/me";
