--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -4508,7 +4508,6 @@
 "~^/humans\.txt$" "/Links";
 "~^/docs/statistics/decision/Links$" "/Links";
 "~^/docs/statistics/Links$" "/Links";
-"~^/me$" "/Links";
 "~^/Linksep$" "/Links";
 "~^/links\.html$" "/Links";
 "~^/Links\.html$" "/Links";
@@ -24027,6 +24026,7 @@
 "~^/docs/statistics/prediction/favicon.ico.*$" "/static/img/favicon.ico";
 "~^/docs/statistics/causality/2015-1$" "/docs/statistics/causality/index";
 "~^/docs/traffic/2010-%C3.*$" "/docs/traffic/2010-gwernnet-nfsncosts.maff";
+"~^/docs/heritability$" "/docs/genetics/heritable/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
