--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4668,3 +4668,6 @@ default "";
 "~^/2021-arora.html.*$" "/docs/ai/nn/fully-connected/2021-arora.html";
 # The Great Lowercasing begins:
 "~^/Links.*$" "/me";
+"~^/docs/economics/2019-ager.pdf.*$" "/docs/economics/2021-ager.pdf";
+"~^/docs/sociology/2013-bleakley-1.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5436311/";
+"~^/docs/psychology/vision/1996-qunn.pdf.*$" "/docs/psychology/vision/1996-quinn.pdf";
